# punycode

./: README.md  clancy.yaml  main.py  pyproject.toml  task.md
.opencode/state/: chaos.md  developer.md
_resources/: rfc3492.txt
examples/: advanced_usage.py  basic_usage.py  bootstring_lowlevel.py  error_handling.py  idna_domains.py
src/punycode/: __init__.py  bootstring.py  core.py  idna.py
tests/: __init__.py  test_bootstring.py  test_core.py  test_idna.py
